fix notification z-index

--- a/imports/plugins/included/default-theme/client/styles/alerts.less
+++ b/imports/plugins/included/default-theme/client/styles/alerts.less
@@ -25,6 +25,7 @@
   display: flex;
   padding: 0;
   border-radius: 0;
+  z-index: 9999;
 }
 
 .rui.alert > .content {
